--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,15 @@
                         <a href="/music" title="Music">music</a>
                         <span>•</span>
                         <a href="/about" title="About">about</a>      
+                        
                     </nav>
+                    <div class="social-icons">
+                            <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social linkdin' title="Linkedin"></a>
+                            <a href="https://github.com/odedw" target="_blank" class='social github' title="Github"></a>
+                            <a href="https://twitter.com/InjaGames" target="_blank" class='social twitter' title="Twitter"></a>
+                            <a href="https://www.youtube.com/channel/UCA8cEeddcTGoZAPoBbFC78A" target="_blank" class='social youtube' title="YouTube"></a>
+                            <a href="https://soundcloud.com/injagames" target="_blank" class='social soundcloud' title="Soundcloud"> </a>
+                        </div>
                 </div>
             </div>
 
