--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -75,24 +75,6 @@ a:hover {
   width: 100%;
 }
 /*
-* Container
-*
-* Center the page content.
-*/
-.container {
-  max-width: 28rem;
-}
-@media (min-width: 38rem) {
-  .container {
-    max-width: 32rem;
-  }
-}
-@media (min-width: 56rem) {
-  .container {
-    max-width: 38rem;
-  }
-}
-/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
@@ -102,6 +84,8 @@ a:hover {
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-bottom: 1px solid #eee;
+  text-align: center;
+  overflow: auto;
 }
 .masthead a {
   color: #bbb;
@@ -128,12 +112,63 @@ a:hover {
 .masthead nav {
   display: inline-block;
 }
-@media (max-width: 48rem) {
-  .masthead-title {
-    text-align: center;
+.masthead .social-icons {
+  display: inline-block;
+  font-size: 20px;
+}
+.masthead .social-icons a {
+  font-family: 'zocial';
+  margin-right: 5px;
+}
+.masthead .social-icons a.twitter:before {
+  content: "T";
+}
+.masthead .social-icons a.linkdin:before {
+  content: "L";
+}
+.masthead .social-icons a.soundcloud:before {
+  content: "s";
+}
+.masthead .social-icons a.github:before {
+  content: "\00E8";
+}
+.masthead .social-icons a.youtube:before {
+  content: "U";
+}
+@media (min-width: 38rem) {
+  .masthead .masthead-title {
+    float: left;
+    margin-right: 10px;
   }
-  .masthead-title small {
-    display: none;
+  .masthead nav {
+    float: left;
+    margin-right: 5px;
+  }
+  .masthead .social-icons {
+    float: right;
+    clear: right;
+    top: -5px;
+    position: relative;
+  }
+}
+/*
+* Container
+*
+* Center the page content.
+*/
+.container {
+  max-width: 28rem;
+  clear: both;
+  text-align: center;
+}
+@media (min-width: 38rem) {
+  .container {
+    max-width: 32rem;
+  }
+}
+@media (min-width: 56rem) {
+  .container {
+    max-width: 38rem;
   }
 }
 /*
@@ -233,129 +268,6 @@ a.pagination-item:hover {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
   }
-}
-/*
-* Reverse layout
-*
-* Flip the orientation of the page by placing the `.sidebar` and sidebar toggle
-* on the right side.
-*/
-.layout-reverse .wrap,
-.layout-reverse .sidebar-toggle {
-  -webkit-transition-property: right;
-  -moz-transition-property: right;
-  -ms-transition-property: right;
-  transition-property: right;
-}
-.layout-reverse .sidebar {
-  left: auto;
-  right: -14rem;
-}
-.layout-reverse .sidebar-toggle {
-  left: auto;
-  right: 1rem;
-}
-.layout-reverse #sidebar-checkbox:checked + .sidebar {
-  left: auto;
-  right: 0;
-}
-.layout-reverse #sidebar-checkbox:checked ~ .wrap {
-  left: auto;
-  right: 14rem;
-}
-/*
-* Themes
-*
-* Apply custom color schemes by adding the appropriate class to the `body`.
-* Based on colors from Base16: http://chriskempson.github.io/base16/#default.
-*/
-/* Red */
-.theme-base-08 .sidebar,
-.theme-base-08 .sidebar-toggle:active,
-.theme-base-08 #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #ac4142;
-}
-.theme-base-08 .container a,
-.theme-base-08 .sidebar-toggle,
-.theme-base-08 .related-posts li a:hover {
-  color: #ac4142;
-}
-/* Orange */
-.theme-base-09 .sidebar,
-.theme-base-09 .sidebar-toggle:active,
-.theme-base-09 #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #d28445;
-}
-.theme-base-09 .container a,
-.theme-base-09 .sidebar-toggle,
-.theme-base-09 .related-posts li a:hover {
-  color: #d28445;
-}
-/* Yellow */
-.theme-base-0a .sidebar,
-.theme-base-0a .sidebar-toggle:active,
-.theme-base-0a #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #f4bf75;
-}
-.theme-base-0a .container a,
-.theme-base-0a .sidebar-toggle,
-.theme-base-0a .related-posts li a:hover {
-  color: #f4bf75;
-}
-/* Green */
-.theme-base-0b .sidebar,
-.theme-base-0b .sidebar-toggle:active,
-.theme-base-0b #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #90a959;
-}
-.theme-base-0b .container a,
-.theme-base-0b .sidebar-toggle,
-.theme-base-0b .related-posts li a:hover {
-  color: #90a959;
-}
-/* Cyan */
-.theme-base-0c .sidebar,
-.theme-base-0c .sidebar-toggle:active,
-.theme-base-0c #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #75b5aa;
-}
-.theme-base-0c .container a,
-.theme-base-0c .sidebar-toggle,
-.theme-base-0c .related-posts li a:hover {
-  color: #75b5aa;
-}
-/* Blue */
-.theme-base-0d .sidebar,
-.theme-base-0d .sidebar-toggle:active,
-.theme-base-0d #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #6a9fb5;
-}
-.theme-base-0d .container a,
-.theme-base-0d .sidebar-toggle,
-.theme-base-0d .related-posts li a:hover {
-  color: #6a9fb5;
-}
-/* Magenta */
-.theme-base-0e .sidebar,
-.theme-base-0e .sidebar-toggle:active,
-.theme-base-0e #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #aa759f;
-}
-.theme-base-0e .container a,
-.theme-base-0e .sidebar-toggle,
-.theme-base-0e .related-posts li a:hover {
-  color: #aa759f;
-}
-/* Brown */
-.theme-base-0f .sidebar,
-.theme-base-0f .sidebar-toggle:active,
-.theme-base-0f #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-  background-color: #8f5536;
-}
-.theme-base-0f .container a,
-.theme-base-0f .sidebar-toggle,
-.theme-base-0f .related-posts li a:hover {
-  color: #8f5536;
 }
 .theme-base-10,
 .theme-base-10 .sidebar-toggle,
