--- a/public/css/lanyon.less
+++ b/public/css/lanyon.less
@@ -77,25 +77,7 @@ a{
 }
 
 
-/*
-* Container
-*
-* Center the page content.
-*/
 
-.container {
-    max-width: 28rem;
-}
-@media (min-width: 38rem) {
-    .container {
-        max-width: 32rem;
-    }
-}
-@media (min-width: 56rem) {
-    .container {
-        max-width: 38rem;
-    }
-}
 
 
 /*
@@ -109,11 +91,12 @@ a{
     padding-bottom: 1rem;
     margin-bottom: 3rem;
     border-bottom: 1px solid #eee;
-    
+    text-align: center;
+    overflow: auto;
     a {
         color: #bbb;
         &:hover{
-             color: #fff;
+            color: #fff;
         }
     }
     .masthead-title {
@@ -121,11 +104,11 @@ a{
         margin-bottom: 0;
         display:inline-block;
         width:140px;
-        color: #505050;
+        color: #505050;      
         a:hover {
             color: #bbb;
         }
-
+        
         small {
             font-size: 75%;
             font-weight: 400;
@@ -133,17 +116,64 @@ a{
             letter-spacing: 0;
         }
     }
-    
+
     nav{
+        display:inline-block;                
+    }
+
+    .social-icons{
         display:inline-block;
+        font-size:20px;                
+        a{
+            font-family: 'zocial';
+            &.twitter { &:before { content: "T"; } }   
+            &.linkdin { &:before { content: "L"; } }   
+            &.soundcloud { &:before { content: "s"; } }   
+            &.github { &:before { content: "\00E8"; } }               
+            &.youtube { &:before { content: "U"; } }   
+            margin-right: 5px;
+        }
     }
 }
-@media (max-width: 48rem) {
-    .masthead-title {
-        text-align: center;
+
+@media (min-width: 38rem){
+    .masthead{
+        .masthead-title{
+            float:left;
+            margin-right:10px;
+        }
+        nav{            
+            float:left;
+            margin-right:5px;
+        }
+        .social-icons{
+            float:right;            
+            clear:right;
+            top: -5px;
+            position: relative;
+        }
     }
-    .masthead-title small {
-        display: none;
+}
+/*
+* Container
+*
+* Center the page content.
+*/
+
+.container {
+    max-width: 28rem;    
+    clear:both;
+    text-align: center
+}
+@media (min-width: 38rem) {
+    .container {
+        max-width: 32rem;
+        
+    }
+}
+@media (min-width: 56rem) {
+    .container {
+        max-width: 38rem;          
     }
 }
 
@@ -255,146 +285,7 @@ a.pagination-item:hover {
     }
 }
 
-
-/*
-* Reverse layout
-*
-* Flip the orientation of the page by placing the `.sidebar` and sidebar toggle
-* on the right side.
-*/
-
-.layout-reverse .wrap,
-.layout-reverse .sidebar-toggle {
-    -webkit-transition-property: right;
-    -moz-transition-property: right;
-    -ms-transition-property: right;
-    transition-property: right;
-}
-
-
-.layout-reverse .sidebar {
-    left: auto;
-    right: -14rem;
-}
-.layout-reverse .sidebar-toggle {
-    left: auto;
-    right: 1rem;
-}
-
-.layout-reverse #sidebar-checkbox:checked + .sidebar {
-    left: auto;
-    right: 0;
-}
-.layout-reverse #sidebar-checkbox:checked ~ .wrap {
-    left: auto;
-    right: 14rem;
-}
-
-
-/*
-* Themes
-*
-* Apply custom color schemes by adding the appropriate class to the `body`.
-* Based on colors from Base16: http://chriskempson.github.io/base16/#default.
-*/
-
-/* Red */
-.theme-base-08 .sidebar,
-.theme-base-08 .sidebar-toggle:active,
-.theme-base-08 #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #ac4142;
-}
-.theme-base-08 .container a,
-.theme-base-08 .sidebar-toggle,
-.theme-base-08 .related-posts li a:hover {
-    color: #ac4142;
-}
-
-/* Orange */
-.theme-base-09 .sidebar,
-.theme-base-09 .sidebar-toggle:active,
-.theme-base-09 #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #d28445;
-}
-.theme-base-09 .container a,
-.theme-base-09 .sidebar-toggle,
-.theme-base-09 .related-posts li a:hover {
-    color: #d28445;
-}
-
-/* Yellow */
-.theme-base-0a .sidebar,
-.theme-base-0a .sidebar-toggle:active,
-.theme-base-0a #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #f4bf75;
-}
-.theme-base-0a .container a,
-.theme-base-0a .sidebar-toggle,
-.theme-base-0a .related-posts li a:hover {
-    color: #f4bf75;
-}
-
-/* Green */
-.theme-base-0b .sidebar,
-.theme-base-0b .sidebar-toggle:active,
-.theme-base-0b #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #90a959;
-}
-.theme-base-0b .container a,
-.theme-base-0b .sidebar-toggle,
-.theme-base-0b .related-posts li a:hover {
-    color: #90a959;
-}
-
-/* Cyan */
-.theme-base-0c .sidebar,
-.theme-base-0c .sidebar-toggle:active,
-.theme-base-0c #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #75b5aa;
-}
-.theme-base-0c .container a,
-.theme-base-0c .sidebar-toggle,
-.theme-base-0c .related-posts li a:hover {
-    color: #75b5aa;
-}
-
-/* Blue */
-.theme-base-0d .sidebar,
-.theme-base-0d .sidebar-toggle:active,
-.theme-base-0d #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #6a9fb5;
-}
-.theme-base-0d .container a,
-.theme-base-0d .sidebar-toggle,
-.theme-base-0d .related-posts li a:hover {
-    color: #6a9fb5;
-}
-
-/* Magenta */
-.theme-base-0e .sidebar,
-.theme-base-0e .sidebar-toggle:active,
-.theme-base-0e #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #aa759f;
-}
-.theme-base-0e .container a,
-.theme-base-0e .sidebar-toggle,
-.theme-base-0e .related-posts li a:hover {
-    color: #aa759f;
-}
-
-/* Brown */
-.theme-base-0f .sidebar,
-.theme-base-0f .sidebar-toggle:active,
-.theme-base-0f #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
-    background-color: #8f5536;
-}
-.theme-base-0f .container a,
-.theme-base-0f .sidebar-toggle,
-.theme-base-0f .related-posts li a:hover {
-    color: #8f5536;
-}
 .theme-base-10,
-
 .theme-base-10 .sidebar-toggle,
 .theme-base-10 .related-posts li{
     color: #bbb;
