--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
                 {{ content }}
             </div>
         </div>
-
+    
+        {% include analytics.html %}
+        
     </body>
 </html>
