--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta name="description" content="{{site.description}}">
+    <meta name="description" content="{{ site.description }}">
     <title>
         {% if page.title %}
         {{ page.title }} &middot; {{ site.title }}
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/public/css/syntax.css">
     <link rel="stylesheet" href="/public/css/lanyon.css">
     <link rel="stylesheet" href="/public/css/zocial.css">
+    <link rel="stylesheet" href="/public/css/site.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
 
     <!-- Icons -->
