--- a/public/css/site.css
+++ b/public/css/site.css
@@ -7,13 +7,22 @@
   padding-left: 0;
   margin: 0;
 }
-#project-list h3 {
+#project-list li {
+  padding: 10px;
+  overflow: auto;
+}
+#project-list li .project-links {
+  font-size: 14px;
+}
+#project-list li h3 {
   margin-bottom: 0;
+}
+#project-list li p {
+  font-size: 14px;
 }
 #project-list li img {
   float: left;
   margin: 0 15px 5px 0;
-  width: auto;
   height: 170px;
   width: 232px;
   border: 2px solid #fff;
@@ -22,16 +31,12 @@
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 #project-list li img:hover {
   -webkit-border-radius: 70px;
   -moz-border-radius: 70px;
   border-radius: 70px;
-}
-#project-list li p {
-  font-size: 14px;
-}
-#project-list li {
-  padding: 10px;
-  overflow: auto;
 }
