--- a/public/css/site.less
+++ b/public/css/site.less
@@ -8,42 +8,49 @@
         margin:0;
     }
 
-    h3 {
-        margin-bottom:0;
-    }
 
-    li img {
-        float: left;
-        margin: 0 15px 5px 0;
-        width:auto;
-        height:170px;
-        width:232px;
-        border: 2px solid #fff;
-        box-shadow: 0 0 1px rgba(0,0,0,0.2);
-        box-sizing: content-box;
-
-
-        -webkit-transition: 0.3s;
-        -moz-transition: 0.3s;
-        transition: 0.3s;
-
-       
-
-
-        &:hover {
-            -webkit-border-radius: 70px;
-        -moz-border-radius: 70px;
-        border-radius: 70px;
-        }
-    }
-
-    li p {
-        font-size:14px;
-    }
 
     li {
         padding: 10px;
         overflow: auto;
+
+        .project-links{
+         font-size:14px;   
+        }
+        h3 {
+            margin-bottom:0;
+        } 
+
+        p {
+            font-size:14px;
+        }
+
+        
+        img {
+            float: left;
+            margin: 0 15px 5px 0;
+            height:170px;
+            width:232px;
+            border: 2px solid #fff;
+            box-shadow: 0 0 1px rgba(0,0,0,0.2);
+            box-sizing: content-box;
+
+
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            transition: 0.3s;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-radius: 10px;
+
+
+
+            &:hover {
+                -webkit-border-radius: 70px;
+                -moz-border-radius: 70px;
+                border-radius: 70px;
+            }
+        } 
     }
 }
 
