change project images to use gfycat

--- a/public/css/site.less
+++ b/public/css/site.less
@@ -26,8 +26,8 @@
         }
 
         
-        img {
-            float: left;
+        .project-image {
+            float: left !important;
             margin: 0 15px 5px 0;
             height:170px;
             width:232px;
@@ -39,17 +39,7 @@
             -webkit-transition: 0.3s;
             -moz-transition: 0.3s;
             transition: 0.3s;
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            border-radius: 10px;
-
-
-
-            &:hover {
-                -webkit-border-radius: 70px;
-                -moz-border-radius: 70px;
-                border-radius: 70px;
-            }
+            
         } 
     }
 }
