--- a/public/css/site.css
+++ b/public/css/site.css
@@ -20,8 +20,8 @@
 #project-list li p {
   font-size: 14px;
 }
-#project-list li img {
-  float: left;
+#project-list li .project-image {
+  float: left !important;
   margin: 0 15px 5px 0;
   height: 170px;
   width: 232px;
@@ -31,12 +31,4 @@
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-}
-#project-list li img:hover {
-  -webkit-border-radius: 70px;
-  -moz-border-radius: 70px;
-  border-radius: 70px;
 }
