--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2,6 +2,13 @@
 #project-list {
   text-align: left;
 }
+#project-list .transition-ease {
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
 #project-list ul {
   list-style-type: none;
   padding-left: 0;
@@ -21,14 +28,47 @@
   font-size: 14px;
 }
 #project-list li .project-image {
-  float: left !important;
+  float: left;
   margin: 0 15px 5px 0;
   height: 170px;
   width: 232px;
   border: 2px solid #fff;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
   box-sizing: content-box;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+#project-list li .project-image .overlay {
+  background: black;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#project-list li .project-image .cta {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -10px;
+  opacity: 0;
+  color: #bbb;
+}
+#project-list li .project-image .cta:hover {
+  color: #fff;
+}
+#project-list li .project-image:hover .gfyitem {
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+#project-list li .project-image:hover .overlay {
+  opacity: 0.85;
+}
+#project-list li .project-image:hover .cta {
+  top: 40%;
+  opacity: 1;
 }
