--- a/public/css/site.less
+++ b/public/css/site.less
@@ -1,5 +1,12 @@
 #project-list{
     text-align: left;
+    .transition-ease{
+        -webkit-transition: all 300ms ease-out;  
+        -moz-transition: all 300ms ease-out;  
+        -o-transition: all 300ms ease-out;  
+        -ms-transition: all 300ms ease-out;  
+        transition: all 300ms ease-out;     
+    }
 
     ul {
         list-style-type: none;
@@ -15,7 +22,7 @@
         overflow: auto;
 
         .project-links{
-         font-size:14px;   
+            font-size:14px;   
         }
         h3 {
             margin-bottom:0;
@@ -25,21 +32,64 @@
             font-size:14px;
         }
 
-        
+
         .project-image {
-            float: left !important;
+            float: left;
             margin: 0 15px 5px 0;
             height:170px;
             width:232px;
             border: 2px solid #fff;
             box-shadow: 0 0 1px rgba(0,0,0,0.2);
             box-sizing: content-box;
+            position:relative;
+            overflow: hidden;
+            text-align: center;
+
+            .overlay{
+                background:black;
+                opacity: 0;   
+                position:absolute;
+                top:0;
+                bottom: 0;
+                left:0;
+                right:0;
+
+            }
+
+            .cta{
+                position: absolute;
+                left:0;
+                right:0;
+                top:-10px;
+                opacity: 0;
+                color: #bbb;
+                &:hover{
+                    color: #fff;
+                }
 
 
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            transition: 0.3s;
-            
+            }
+
+
+
+            &:hover{
+                .gfyitem{
+                    -moz-transform: scale(1.2);  
+                    -o-transform: scale(1.2);  
+                    -webkit-transform: scale(1.2);  
+                    transform: scale(1.2);     
+                }
+
+                .overlay{
+                    opacity: 0.85;
+                }
+
+                .cta{
+                    top:40%;   
+                    opacity: 1;
+                }
+            }
+
         } 
     }
 }
