--- a/public/css/site.less
+++ b/public/css/site.less
@@ -94,3 +94,36 @@
     }
 }
 
+#music-list{
+    /* line 26, ../_sass/_base.scss */
+
+    ul {
+        list-style-type: none;
+
+        padding-left: 0;
+        margin:0;       
+        width:100%;
+
+        .youtube-video{
+            margin-bottom:10px;   
+        }
+    }
+
+    .video-wrapper {
+        float: none;
+        clear: both;
+        width: 100%;
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 25px;
+        height: 0;
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
