--- a/public/css/lanyon.less
+++ b/public/css/lanyon.less
@@ -105,6 +105,8 @@ a{
         display:inline-block;
         width:140px;
         color: #505050;      
+         font-size:20px;
+            line-height: 25px;
         a:hover {
             color: #bbb;
         }
@@ -141,6 +143,8 @@ a{
         .masthead-title{
             float:left;
             margin-right:10px;
+            font-size:20px;
+            line-height: 25px;
         }
         nav{            
             float:left;
