--- a/public/css/site.css
+++ b/public/css/site.css
@@ -100,3 +100,18 @@
   width: 100%;
   height: 100%;
 }
+#footer {
+  margin-top: 15px;
+  font-size: 10px;
+  text-align: center;
+  border-top: 1px solid #eee;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+@media (min-width: 22rem) {
+  #footer {
+    font-size: 12px;
+    text-align: right;
+    padding-right: 20px;
+  }
+}
