--- a/public/css/site.less
+++ b/public/css/site.less
@@ -127,3 +127,21 @@
     }
 }
 
+#footer{    
+    margin-top:15px;
+    font-size:10px;
+    text-align: center;
+    border-top: 1px solid #eee;
+    padding-top:5px;
+
+    padding-bottom:5px;
+}
+
+@media (min-width: 22rem) {
+    #footer{    
+
+        font-size:12px;
+        text-align: right;    
+        padding-right:20px;
+    }
+}
