--- a/public/css/site.css
+++ b/public/css/site.css
@@ -100,12 +100,50 @@
   width: 100%;
   height: 100%;
 }
+#about-container {
+  text-align: left;
+}
+#about-container #first-section {
+  margin: auto;
+  overflow: auto;
+  width: 200px;
+}
+@media (min-width: 26rem) {
+  #about-container #first-section {
+    width: auto;
+  }
+}
+#about-container #first-section #profile-pic {
+  margin: auto;
+  width: 200px;
+}
+@media (min-width: 26rem) {
+  #about-container #first-section #profile-pic {
+    float: left;
+    margin-right: 30px;
+  }
+}
+#about-container #first-section span {
+  font-size: 14px;
+}
+@media (min-width: 26rem) {
+  #about-container #first-section span {
+    font-size: 16px;
+  }
+}
+#about-container #first-section .section-text {
+  margin: auto;
+}
+#about-container #first-section .section-text .section-header {
+  margin-top: 8px;
+}
 #footer {
   margin-top: 15px;
   font-size: 10px;
   text-align: center;
   border-top: 1px solid #eee;
   padding-top: 5px;
+  clear: both;
   padding-bottom: 5px;
 }
 @media (min-width: 22rem) {
