--- a/public/css/site.css
+++ b/public/css/site.css
@@ -103,39 +103,49 @@
 #about-container {
   text-align: left;
 }
-#about-container #first-section {
+#about-container .section {
   margin: auto;
   overflow: auto;
   width: 200px;
+  margin-bottom: 20px;
 }
 @media (min-width: 26rem) {
-  #about-container #first-section {
+  #about-container .section {
     width: auto;
   }
 }
-#about-container #first-section #profile-pic {
+#about-container .section .section-text {
+  margin: auto;
+}
+#about-container .section .section-text .section-header {
+  margin-top: 8px;
+}
+#about-container .section .section-text span {
+  font-size: 14px;
+}
+@media (min-width: 26rem) {
+  #about-container .section .section-text span {
+    font-size: 16px;
+  }
+}
+#about-container .section .section-image {
   margin: auto;
   width: 200px;
 }
 @media (min-width: 26rem) {
-  #about-container #first-section #profile-pic {
+  #about-container .section .section-image.left {
     float: left;
     margin-right: 30px;
   }
-}
-#about-container #first-section span {
-  font-size: 14px;
-}
-@media (min-width: 26rem) {
-  #about-container #first-section span {
-    font-size: 16px;
+  #about-container .section .section-image.right {
+    float: right;
+    margin-left: 30px;
   }
 }
-#about-container #first-section .section-text {
-  margin: auto;
-}
-#about-container #first-section .section-text .section-header {
-  margin-top: 8px;
+#about-container #interests #pcg-canvas {
+  background-color: white;
+  width: 200px;
+  height: 200px;
 }
 #footer {
   margin-top: 15px;
