--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,13 +41,6 @@
 
        
         {% include analytics.html %}
-        <script>
-            (function(d, t) {
-                var g = d.createElement(t),
-                    s = d.getElementsByTagName(t)[0];
-                g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
-                s.parentNode.insertBefore(g, s);
-            }(document, 'script'));
-        </script>
+        {% include scripts.html %}        
     </body>
 </html>
