--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,6 @@
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
     <link rel="shortcut icon" href="/public/favicon.ico">
 
-    <!-- RSS -->
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+    <!-- Scripts -->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
