--- a/public/css/site.css
+++ b/public/css/site.css
@@ -15,14 +15,16 @@
   margin: 0;
 }
 #project-list li {
-  padding: 10px;
+  padding: 0px 10px;
   overflow: auto;
+  margin-bottom: 30px;
 }
 #project-list li .project-links {
   font-size: 14px;
 }
 #project-list li h3 {
   margin-bottom: 0;
+  margin-top: 0;
 }
 #project-list li p {
   font-size: 14px;
@@ -142,10 +144,25 @@
     margin-left: 30px;
   }
 }
-#about-container #interests #pcg-canvas {
-  background-color: white;
+#about-container #interests #pcg-container {
+  overflow: hidden;
+}
+#about-container #interests #pcg-container #pcg-canvas {
+  background-color: transparent;
   width: 200px;
   height: 200px;
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration: 1.9s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
 }
 #footer {
   margin-top: 15px;
