--- a/public/css/site.less
+++ b/public/css/site.less
@@ -18,14 +18,15 @@
 
 
     li {
-        padding: 10px;
+        padding: 0px 10px;
         overflow: auto;
-
+        margin-bottom:30px;
         .project-links{
             font-size:14px;   
         }
         h3 {
             margin-bottom:0;
+            margin-top:0;
         } 
 
         p {
@@ -39,7 +40,7 @@
             height:170px;
             width:232px;
             border: 2px solid #fff;
-            box-shadow: 0 0 1px rgba(0,0,0,0.2);
+            box-shadow: 0 0 1px rgba(0,0,0,0.2); 
             box-sizing: content-box;
             position:relative;
             overflow: hidden;
@@ -156,7 +157,7 @@
                     float:left;                    
                     margin-right: 30px; 
                 }
-                
+
                 &.right{
                     float:right;                    
                     margin-left: 30px; 
@@ -166,10 +167,25 @@
     }
 
     #interests{
-        #pcg-canvas{
-            background-color:white;   
-            width:200px;
-            height:200px;
+        #pcg-container{
+            overflow:hidden;
+            #pcg-canvas{
+                background-color:transparent;   
+                width:200px;
+                height:200px;
+                -webkit-animation-name:             rotate; 
+                -webkit-animation-duration:         1.9s; 
+                -webkit-animation-iteration-count:  infinite;
+                -webkit-animation-timing-function: linear;
+                @-webkit-keyframes rotate {
+                    from {
+                        -webkit-transform: rotate(360deg);
+                    }
+                    to { 
+                        -webkit-transform: rotate(0deg);
+                    }
+                }
+            }
         }
     }
 }
