pcg second idea

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -151,18 +151,16 @@
   background-color: transparent;
   width: 200px;
   height: 200px;
-  -webkit-animation-name: rotate;
-  -webkit-animation-duration: 1.9s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-}
-@-webkit-keyframes rotate {
-  from {
-    -webkit-transform: rotate(360deg);
-  }
-  to {
-    -webkit-transform: rotate(0deg);
-  }
+  transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  /* IE 9 */
+  -webkit-transform: rotate(0deg);
+  /* Opera, Chrome, and Safari */
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 #footer {
   margin-top: 15px;
