--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,5 @@
 
     <!-- Scripts -->
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    {% include analytics.html %}
 </head>
