--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,5 +5,9 @@
         g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
         s.parentNode.insertBefore(g, s);
     }(document, 'script'));
+    $(function(){
+        var title = document.title.indexOf('·') > 0 ? document.title.substr(0,document.title.indexOf('·') - 1) : 'Home';
+        mixpanel.track('Page View - ' + title); 
+    });
 </script>
 <script src="/scripts/rafTicker.js"></script>
