add email to icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
                         <a href="https://twitter.com/InjaGames" target="_blank" class='social twitter' title="Twitter"></a>
                         <a href="https://www.youtube.com/channel/UCA8cEeddcTGoZAPoBbFC78A" target="_blank" class='social youtube' title="YouTube"></a>
                         <a href="https://soundcloud.com/injagames" target="_blank" class='social soundcloud' title="Soundcloud"> </a>
+                        <a href="mailto:oded_wel@hotmail.com" class='social email' title="Email"> </a>
                     </div>
                 </div>
             </div>
