--- a/public/css/lanyon.less
+++ b/public/css/lanyon.less
@@ -132,13 +132,14 @@ a{
             &.linkdin { &:before { content: "L"; } }   
             &.soundcloud { &:before { content: "s"; } }   
             &.github { &:before { content: "\00E8"; } }               
-            &.youtube { &:before { content: "U"; } }   
+            &.youtube { &:before { content: "U"; } }
+            &.email { &:before { content: "]"; } }   
             margin-right: 5px;
         }
     }
 }
 
-@media (min-width: 38rem){
+@media (min-width: 56rem){
     .masthead{
         .masthead-title{
             float:left;
