set the landing page to be the about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
                         <span>•</span>
                         <a href="/music" title="Music">music</a>
                         <span>•</span>
-                        <a href="/about" title="About">about</a>      
+                        <a href="/" title="About">about</a>      
 
                     </nav>
                     <div class="social-icons">
