--- a/public/css/site.less
+++ b/public/css/site.less
@@ -21,9 +21,15 @@
         padding: 0px 10px;
         overflow: auto;
         margin-bottom:30px;
+
+        .codepen-header{               
+            margin-bottom:8px;             
+        }
+
         .project-links{
             font-size:14px;   
         }
+        
         h3 {
             margin-bottom:0;
             margin-top:0;
@@ -32,7 +38,6 @@
         p {
             font-size:14px;
         }
-
 
         .project-image {
             float: left;
@@ -89,8 +94,7 @@
                     top:40%;   
                     opacity: 1;
                 }
-            }
-
+            }                        
         } 
     }
 }
