--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,7 @@
 
     <!-- Scripts -->
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.createjs.com/easeljs-0.7.1.min.js"></script>
+    <script src="http://code.createjs.com/tweenjs-0.5.1.min.js"></script>
     {% include analytics.html %}
 </head>
