--- a/public/css/site.less
+++ b/public/css/site.less
@@ -170,7 +170,14 @@
         }
     }
 
-
+    #circle-container{
+        overflow:hidden;   
+        canvas{
+            background-color:transparent;   
+            width:200px;
+            height:200px;   
+        }
+    }
     #pcg-container{
         overflow:hidden;
         #pcg-canvas{
