--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,13 @@
 
                     </nav>
                     <div class="social-icons">
-                        <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social linkdin' title="Linkedin"></a>
-                        <a href="https://github.com/odedw" target="_blank" class='social github' title="Github"></a>
-                        <a href="https://twitter.com/InjaGames" target="_blank" class='social twitter' title="Twitter"></a>
-                        <a href="https://www.youtube.com/channel/UCA8cEeddcTGoZAPoBbFC78A" target="_blank" class='social youtube' title="YouTube"></a>
-                        <a href="https://soundcloud.com/injagames" target="_blank" class='social soundcloud' title="Soundcloud"> </a>
-                        <a href="mailto:oded_wel@hotmail.com" class='social email' title="Email"> </a>
+                        <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social icon-linkedin' title="Linkedin"></a>
+                        <a href="https://github.com/odedw" target="_blank" class='social icon-github' title="Github"></a>
+                        <a href="http://codepen.io/odedw" target="_blank" class='social icon-codepen' title="CodePen"></a>
+                        <a href="https://twitter.com/InjaGames" target="_blank" class='social icon-twitter' title="Twitter"></a>
+                        <a href="https://www.youtube.com/channel/UCA8cEeddcTGoZAPoBbFC78A" target="_blank" class='social icon-youtube' title="YouTube"></a>
+                        <a href="https://soundcloud.com/injagames" target="_blank" class='social icon-soundcloud' title="Soundcloud"> </a>
+                        <a href="mailto:oded_wel@hotmail.com" class='social icon-mail' title="Email"> </a>
                     </div>
                 </div>
             </div>
