--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -32,6 +32,47 @@
 *
 * Update the foundational and global aspects of the page.
 */
+@font-face {
+  font-family: 'social';
+  src: url('/public/fonts/social.eot?-seb9az');
+  src: url('/public/fonts/social.eot?#iefix-seb9az') format('embedded-opentype'), url('/public/fonts/social.woff?-seb9az') format('woff'), url('/public/fonts/social.ttf?-seb9az') format('truetype'), url('/public/fonts/social.svg?-seb9az#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+[class^="icon-"],
+[class*=" icon-"] {
+  font-family: 'social';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-codepen:before {
+  content: "\e600";
+}
+.icon-youtube:before {
+  content: "\e601";
+}
+.icon-mail:before {
+  content: "\e602";
+}
+.icon-twitter:before {
+  content: "\e603";
+}
+.icon-github:before {
+  content: "\e604";
+}
+.icon-soundcloud:before {
+  content: "\e605";
+}
+.icon-linkedin:before {
+  content: "\e606";
+}
 /* Prevent scroll on narrow devices */
 html,
 body {
@@ -116,35 +157,15 @@ a:hover {
 }
 .masthead .social-icons {
   display: inline-block;
-  font-size: 20px;
+  font-size: 22px;
 }
 .masthead .social-icons a {
-  font-family: 'zocial';
   margin-right: 5px;
-}
-.masthead .social-icons a.twitter:before {
-  content: "T";
-}
-.masthead .social-icons a.linkdin:before {
-  content: "L";
-}
-.masthead .social-icons a.soundcloud:before {
-  content: "s";
-}
-.masthead .social-icons a.github:before {
-  content: "\00E8";
-}
-.masthead .social-icons a.youtube:before {
-  content: "U";
-}
-.masthead .social-icons a.email:before {
-  content: "]";
 }
 @media (min-width: 56rem) {
   .masthead .masthead-title {
     float: left;
     margin-right: 10px;
-    font-size: 20px;
     line-height: 25px;
   }
   .masthead nav {
@@ -154,7 +175,6 @@ a:hover {
   .masthead .social-icons {
     float: right;
     clear: right;
-    top: -5px;
     position: relative;
   }
 }
