--- a/public/css/lanyon.less
+++ b/public/css/lanyon.less
@@ -35,6 +35,53 @@
 */
 @import url(http://fonts.googleapis.com/css?family=Advent+Pro);
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
+@font-face {
+	font-family: 'social';
+	src:url('/public/fonts/social.eot?-seb9az');
+	src:url('/public/fonts/social.eot?#iefix-seb9az') format('embedded-opentype'),
+		url('/public/fonts/social.woff?-seb9az') format('woff'),
+		url('/public/fonts/social.ttf?-seb9az') format('truetype'),
+		url('/public/fonts/social.svg?-seb9az#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'social';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-codepen:before {
+	content: "\e600";
+}
+.icon-youtube:before {
+	content: "\e601";
+}
+.icon-mail:before {
+	content: "\e602";
+}
+.icon-twitter:before {
+	content: "\e603";
+}
+.icon-github:before {
+	content: "\e604";
+}
+.icon-soundcloud:before {
+	content: "\e605";
+}
+.icon-linkedin:before {
+	content: "\e606";
+}
+
 /* Prevent scroll on narrow devices */
 html,
 body {
@@ -125,15 +172,8 @@ a{
 
     .social-icons{
         display:inline-block;
-        font-size:20px;                
-        a{
-            font-family: 'zocial';
-            &.twitter { &:before { content: "T"; } }   
-            &.linkdin { &:before { content: "L"; } }   
-            &.soundcloud { &:before { content: "s"; } }   
-            &.github { &:before { content: "\00E8"; } }               
-            &.youtube { &:before { content: "U"; } }
-            &.email { &:before { content: "]"; } }   
+         font-size:22px;              
+        a{            
             margin-right: 5px;
         }
     }
@@ -144,7 +184,7 @@ a{
         .masthead-title{
             float:left;
             margin-right:10px;
-            font-size:20px;
+           
             line-height: 25px;
         }
         nav{            
@@ -154,7 +194,6 @@ a{
         .social-icons{
             float:right;            
             clear:right;
-            top: -5px;
             position: relative;
         }
     }
