--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,19 +14,10 @@
     </title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/public/css/poole.css">
-    <link rel="stylesheet" href="/public/css/syntax.css">
-    <link rel="stylesheet" href="/public/css/lanyon.css">    
-    <link rel="stylesheet" href="/public/css/site.css">
+    <link rel="stylesheet" href="/public/css/styles.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
 
     <!-- Icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
     <link rel="shortcut icon" href="/public/favicon.ico">
-
-    <!-- Scripts -->
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://code.createjs.com/easeljs-0.7.1.min.js"></script>
-    <script src="http://code.createjs.com/tweenjs-0.5.1.min.js"></script>
-    {% include analytics.html %}
 </head>
