remove some social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,35 +10,32 @@
             <div class="masthead">
                 <div class="container">
                     <h1 class="masthead-title">
-                        <a href="/" title="Home">{{ site.title }}</a>           
+                        <a href="/" title="Home">{{ site.title }}</a>
                     </h1>
                     <nav>
                         <a href="/projects" title="Projects">projects</a>
                         <span>•</span>
                         <a href="/music" title="Music">music</a>
                         <span>•</span>
-                        <a href="/" title="About">about</a>      
+                        <a href="/" title="About">about</a>
 
                     </nav>
                     <div class="social-icons">
-                        <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social icon-linkedin' title="Linkedin"></a>
                         <a href="https://github.com/odedw" target="_blank" class='social icon-github' title="Github"></a>
-                        <a href="http://codepen.io/odedw" target="_blank" class='social icon-codepen' title="CodePen"></a>
                         <a href="https://twitter.com/InjaGames" target="_blank" class='social icon-twitter' title="Twitter"></a>
-                        <a href="https://www.youtube.com/channel/UCA8cEeddcTGoZAPoBbFC78A" target="_blank" class='social icon-youtube' title="YouTube"></a>
-                        <a href="https://soundcloud.com/injagames" target="_blank" class='social icon-soundcloud' title="Soundcloud"> </a>
-                        <a href="mailto:oded_wel@hotmail.com" class='social icon-mail' title="Email"> </a>
+                        <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social icon-linkedin' title="Linkedin"></a>
+                        <a href="mailto:oded.welgreen@gmail.com" class='social icon-mail' title="Email"> </a>
                     </div>
                 </div>
             </div>
 
             <div class="container content">
                 {{ content }}
-                  
+
             </div>
-           
-        </div>        
+
+        </div>
         {% include footer.html %}
-        {% include scripts.html %}        
+        {% include scripts.html %}
     </body>
 </html>
