--- a/styles/less/lanyon.less
+++ b/styles/less/lanyon.less
@@ -15,7 +15,7 @@
 
 
 /*
-* Contents
+* Contents styles/less/*.less
 *
 * Global resets
 * Masthead
@@ -23,7 +23,7 @@
 * Slide effect
 * Posts and pages
 * Pagination
-* Reverse layout 
+* Reverse layout
 * Themes
 */
 
@@ -34,7 +34,7 @@
 * Update the foundational and global aspects of the page.
 */
 @import url(http://fonts.googleapis.com/css?family=Advent+Pro);
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
+@import url(http://fonts.googleapis.com/css?family=Oxygen); 
 @font-face {
 	font-family: 'social';
 	src:url('/public/fonts/social.eot?-seb9az');
@@ -151,13 +151,13 @@ a{
         margin-bottom: 0;
         display:inline-block;
         width:140px;
-        color: #505050;      
+        color: #505050;
          font-size:20px;
             line-height: 25px;
         a:hover {
             color: #bbb;
         }
-        
+
         small {
             font-size: 75%;
             font-weight: 400;
@@ -167,13 +167,13 @@ a{
     }
 
     nav{
-        display:inline-block;                
+        display:inline-block;
     }
 
     .social-icons{
         display:inline-block;
-         font-size:22px;              
-        a{            
+         font-size:22px;
+        a{
             margin-right: 5px;
         }
     }
@@ -184,15 +184,15 @@ a{
         .masthead-title{
             float:left;
             margin-right:10px;
-           
+
             line-height: 25px;
         }
-        nav{            
+        nav{
             float:left;
             margin-right:5px;
         }
         .social-icons{
-            float:right;            
+            float:right;
             clear:right;
             position: relative;
         }
@@ -205,19 +205,19 @@ a{
 */
 
 .container {
-    max-width: 28rem;    
+    max-width: 28rem;
     clear:both;
     text-align: center
 }
 @media (min-width: 38rem) {
     .container {
         max-width: 32rem;
-        
+
     }
 }
 @media (min-width: 56rem) {
     .container {
-        max-width: 38rem;          
+        max-width: 38rem;
     }
 }
 
