--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,13 +1,13 @@
 {% include analytics.html %}
 <script>
-    (function(d, t) {
-        var g = d.createElement(t),
-            s = d.getElementsByTagName(t)[0];
-        g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
-        s.parentNode.insertBefore(g, s);
-    }(document, 'script'));
-    $(function(){
-        var title = document.title.indexOf('·') > 0 ? document.title.substr(0,document.title.indexOf('·') - 1) : 'Home';
-        mixpanel.track('Page View - ' + title); 
-    });
+(function(d, t) {
+  var g = d.createElement(t),
+  s = d.getElementsByTagName(t)[0];
+  g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
+  s.parentNode.insertBefore(g, s);
+}(document, 'script'));
+document.addEventListener("DOMContentLoaded", function() {
+  var title = document.title.indexOf('·') > 0 ? document.title.substr(0,document.title.indexOf('·') - 1) : 'Home';
+  mixpanel.track('Page View - ' + title);
+});
 </script>
