--- a/styles/css/lanyon.css
+++ b/styles/css/lanyon.css
@@ -29,8 +29,6 @@
 *
 * Update the foundational and global aspects of the page.
 */
-@import url(http://fonts.googleapis.com/css?family=Advent+Pro);
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
 @font-face {
   font-family: 'social';
   src: url('/public/fonts/social.eot?-seb9az');
@@ -78,7 +76,7 @@ body {
   overflow-x: hidden;
 }
 html {
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 h1,
 h2,
