--- a/styles/less/lanyon.less
+++ b/styles/less/lanyon.less
@@ -87,7 +87,7 @@ body {
 }
 
 html {
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
