--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <link href="http://gmpg.org/xfn/11" rel="profile">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Droid Sans Mono&subset=latin" rel="stylesheet" type="text/css">
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="description" content="{{ site.description }}">
