--- a/styles/css/poole.css
+++ b/styles/css/poole.css
@@ -107,7 +107,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #ffffff;
 }
 
 
@@ -136,7 +136,7 @@ hr {
 abbr {
   font-size: 85%;
   font-weight: bold;
-  color: #555;
+  color: #ccc;
   text-transform: uppercase;
 }
 abbr[title] {
@@ -147,26 +147,17 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
-}
-code {
-  padding: .25em .5em;
-  font-size: 85%;
-  color: #bf616a;
-  background-color: #f9f9f9;
-  border-radius: 3px;
+  font-family: 'Droid Sans Mono', "Courier New", monospace;
+  color:#ffa1aa;
 }
 pre {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
   padding: 1rem;
-  font-size: .8rem;
+  font-size: 0.9rem;
   line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
   word-break: break-all;
-  word-wrap: break-word;
   background-color: #f9f9f9;
 }
 pre code {
@@ -187,8 +178,8 @@ pre code {
 blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
+  color: #eee;
+  border-left: .25rem solid #eee;
 }
 blockquote p:last-child {
   margin-bottom: 0;
@@ -220,7 +211,7 @@ th {
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: #333;
 }
 
 
@@ -246,8 +237,8 @@ tbody tr:nth-child(odd) th {
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #717171;
-  background-color: #f9f9f9;
+  color: #aaa;
+  background-color: #171717;
 }
 
 
@@ -306,11 +297,6 @@ tbody tr:nth-child(odd) th {
 }
 
 /* Blog post or page title */
-.page-title,
-.post-title,
-.post-title a {
-  color: #303030;
-}
 .page-title,
 .post-title {
   margin-top: 0;
