--- a/styles/css/site.css
+++ b/styles/css/site.css
@@ -462,7 +462,8 @@ a.pagination-item:hover {
   -o-transition: all 1.0s ease;
   transition: all 1.0s ease;
 }
-.posts {
+.posts,
+.post {
   text-align: left;
 }
 #footer {
