Add blog to header links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
                         <a href="/" title="Home">{{ site.title }}</a>
                     </h1>
                     <nav>
+                        <a href="/blog" title="Blog">blog</a>
+                        <span>•</span>
                         <a href="/projects" title="Projects">projects</a>
                         <span>•</span>
                         <a href="/music" title="Music">music</a>
