--- a/styles/css/site.css
+++ b/styles/css/site.css
@@ -81,7 +81,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #999;
   letter-spacing: -0.025rem;
