--- a/styles/less/lanyon.less
+++ b/styles/less/lanyon.less
@@ -91,7 +91,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     color: #999;
     letter-spacing: -.025rem;
