--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,12 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }} • {% include read-time.html %}</span>
+  <span class="post-date">{{ page.date | date_to_string }}
+     • {% include read-time.html %}
+     {% if page.github %}
+     • <a href="{{page.github}}">Github</a>
+     {% endif %}
+  </span>
 
 
   {{ content }}
