--- a/styles/less/site.less
+++ b/styles/less/site.less
@@ -313,3 +313,15 @@ pre code {
 .highlight .vg { color: #40ffff } /* Name.Variable.Global */
 .highlight .vi { color: #40ffff } /* Name.Variable.Instance */
 .highlight .il { color: #3677a9 } /* Literal.Number.Integer.Long */
+
+.responsive-image {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+@media (min-width: 841px) {
+  .responsive-image {
+    width: 75%;
+  }
+}
