--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
                     </nav>
                     <div class="social-icons">
                         <a href="https://github.com/odedw" target="_blank" class='social icon-github' title="Github"></a>
-                        <a href="https://twitter.com/InjaGames" target="_blank" class='social icon-twitter' title="Twitter"></a>
+                        <a href="https://twitter.com/InjaLab" target="_blank" class='social icon-twitter' title="Twitter"></a>
                         <a href="http://www.linkedin.com/pub/oded-welgreen/10/0/a0b" target="_blank" class='social icon-linkedin' title="Linkedin"></a>
                         <a href="mailto:oded.welgreen@gmail.com" class='social icon-mail' title="Email"> </a>
                     </div>
