--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -2,6 +2,10 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+          background-color: #282828;
+              color: #bbb;
+
+
 }
 body {
   margin: 0;
@@ -40,6 +44,10 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
+              color: #bbb;
+  
+
 }
 a:active,
 a:hover {
