--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -4,7 +4,7 @@ siteTitle: Oded Welgreen
 <!doctype html>
 <html lang="en">
   {% include "../components/head.njk" %}
-  <body class="bg-gray-300 text-gray-700">
+  <body class="bg-my-gray text-gray-400">
     {% include "../components/nav.njk" %}
     {{ content | safe }}
     {% include "../components/footer.njk" %}
