--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,6 @@
 <footer id="footer">
-  <span>Powered by <a href="https://www.11ty.dev/">Eleventy</a> & hosted on
-    <a href="http://pages.github.com">GitHub Pages</a></span
+  <span>Built with <a href="https://www.11ty.dev/">Eleventy</a> + <a href="https://tailwindcss.com/">Tailwind</a> & hosted on
+    <a href="http://pages.github.com">GitHub Pages</a>
+  </span
   >
 </footer>
