--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,4 +1,4 @@
-<div class="nav-container p-4 border-b border-gray-300 border-solid">
+<div class="nav-container p-4 border-b border-gray-300 border-solid flex-shrink-0">
     <div class="container flex flex-row mx-auto justify-between flex-wrap">
 
         <a href="/" title="Home" class="text-gray-400 mx-auto">
