--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,4 +1,4 @@
-<footer id="footer">
+<footer id="footer" class="border-t border-gray-300 border-solid text-xs flex-shrink-0 flex justify-end p-2">
   <span>Built with <a href="https://www.11ty.dev/">Eleventy</a> + <a href="https://tailwindcss.com/">Tailwind</a> & hosted on
     <a href="http://pages.github.com">GitHub Pages</a>
   </span
