--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -4,9 +4,11 @@ siteTitle: Oded Welgreen
 <!doctype html>
 <html lang="en">
   {% include "../components/head.njk" %}
-  <body class="bg-my-gray text-gray-400">
+  <body class="bg-my-gray text-gray-400 min-h-screen flex flex-col">
     {% include "../components/nav.njk" %}
-    {{ content | safe }}
+    <div class="container flex-1">
+      {{ content | safe }}
+    </div>
     {% include "../components/footer.njk" %}
     {% include "../components/scripts.njk" %}
     {% include "../components/analytics.njk" %}
