--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,40 @@ a {
 .nav-container a:hover {
   color: #d4edf9;
 }
+
+.nav-container svg {
+  transition: all 0.3s;
+  @apply text-gray-400;
+  @apply fill-current;
+  @apply mx-1;
+}
+
+.nav-container svg:hover {
+  color: #d4edf9;
+}
+
 a:hover {
   color: #d4edf9;
+}
+
+.container {
+  max-width: 45rem;
+}
+.nav-inner-container {
+  flex-direction: column;
+  align-items: center;
+}
+
+#social-icons {
+  margin-top: 0.5rem;
+}
+
+@media only screen and (min-width: 560px) {
+  .nav-inner-container {
+    flex-direction: row;
+  }
+
+  #social-icons {
+    margin-top: 0rem;
+  }
 }
