about page content

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -6,7 +6,7 @@ siteTitle: Oded Welgreen
   {% include "../components/head.njk" %}
   <body class="bg-my-gray text-gray-400 min-h-screen flex flex-col">
     {% include "../components/nav.njk" %}
-    <div class="px-4 flex-1">
+    <div class="p-4 flex-1">
       <div class="container mx-auto">
         {{ content | safe }}
       </div>
