--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -15,9 +15,12 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/main.css">
-    {#<link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400"> #}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poly&family=Poppins&display=swap');
+    </style>
 
     <!-- Icons -->
-    {# <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-    <link rel="shortcut icon" href="/public/favicon.ico"> #}
+    {# <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">#}
+    <link rel="shortcut icon" href="/images/favicon.ico">
 </head>
