add art content

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/default.njk
 ---
 
-<div>
+<div class="pb-6">
     <img class="mx-auto relative object-cover w-36 h-36 border-2 border-white rounded-full" src="/images/profile.jpeg" alt="Profile image"/>
     <h1 class="text-3xl font-serif">Hi! My name is Oded.</h1>
     <p class="mt-6">
