--- a/pages/music.njk
+++ b/pages/music.njk
@@ -5,8 +5,8 @@ title: Music
 
 {% macro youtube(url) %}
     <div class="w-4/5 mx-auto mb-16">
-        <div class="music-youtube-container">
-            <iframe class="music-youtube" src="{{ url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="youtube-container">
+            <iframe class="youtube" src="{{ url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 {% endmacro %}
@@ -18,6 +18,12 @@ title: Music
     </div>
 {% endmacro %}
 <div>
+    <div class="mb-10">
+    Music is an integral part of my life. I started playing piano when I was little, and have played many different instruments in many different bands since then. 
+    I find that very often the creativity and problem solving involved in music making for me is very similar in essence to software development, which is why I enjoy the two.
+    Here are a few recordings of music I created or had a part in making.
+    </div>
+
     {% for link in music %}
         {% if link.type == "youtube" %}
             {{ youtube(link.url) }}
