--- a/styles/main.css
+++ b/styles/main.css
@@ -73,13 +73,13 @@ h1 {
   @apply font-serif;
 }
 
-.music-youtube-container {
+.youtube-container {
   position: relative;
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
 }
-.music-youtube {
+.youtube {
   position: absolute;
   top: 0;
   left: 0;
