--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -26,9 +26,7 @@
             <span class="px-1">•</span>
             <a href="/art" title="Art">art</a>
             <span class="px-1">•</span>
-            <a href="/" title="About">about</a>
-
+            <a href="/about" title="About">about</a>
         </nav>
-
     </div>
 </div>
